--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <!-- Navbar -->
+    <div id="loading">Loading...</div>
+    <div id="loading-cari">Cari...</div>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner" style="padding: 0 50px 0 50px;">
         <button
