--- a/riwayat-komplain.html
+++ b/riwayat-komplain.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="loading">Loading...</div>
+    <div id="loading-cari">Cari...</div>
     <!-- Navbar -->
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner" style="padding: 0 50px 0 50px">
