--- a/riwayat-campaign.html
+++ b/riwayat-campaign.html
@@ -112,7 +112,7 @@
         >
           <h5>Belum ada data</h5>
         </div>
-        <div id="list-card">
+        <div id="list-card" style="padding: 10px 20px 10px 20px;">
 
         </div>
         
